--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "types": ["vitest/globals", "node"],
+    "types": ["testing-library__jest-dom"]
   },
+  "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
